RESOLVED FIXED88881
REGRESSION(r120072): It broke !ENABLE(VIDEO) builds
https://bugs.webkit.org/show_bug.cgi?id=88881
Summary REGRESSION(r120072): It broke !ENABLE(VIDEO) builds
Csaba Osztrogonác
Reported 2012-06-12 09:12:51 PDT
../../../../Source/WebCore/html/shadow/SliderThumbElement.cpp: In function 'bool WebCore::hasVerticalAppearance(WebCore::HTMLInputElement*)': ../../../../Source/WebCore/html/shadow/SliderThumbElement.cpp:68: error: 'class WebCore::RenderTheme' has no member named 'usesVerticalVolumeSlider' Could you check and fix it, please?
Attachments
patch of hasVerticalAppearance function (1.78 KB, patch)
2012-06-12 10:29 PDT, Silvia Pfeiffer
no flags
Silvia Pfeiffer
Comment 1 2012-06-12 09:27:42 PDT
My fault - I'm taking this.
Silvia Pfeiffer
Comment 2 2012-06-12 10:29:59 PDT
Created attachment 147110 [details] patch of hasVerticalAppearance function
Csaba Osztrogonác
Comment 3 2012-06-12 10:32:29 PDT
Comment on attachment 147110 [details] patch of hasVerticalAppearance function rs=me
Csaba Osztrogonác
Comment 4 2012-06-12 10:53:08 PDT
Comment on attachment 147110 [details] patch of hasVerticalAppearance function Clearing flags on attachment: 147110 Committed r120092: <http://trac.webkit.org/changeset/120092>
Csaba Osztrogonác
Comment 5 2012-06-12 10:53:16 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2012-06-12 10:57:53 PDT
Comment on attachment 147110 [details] patch of hasVerticalAppearance function View in context: https://bugs.webkit.org/attachment.cgi?id=147110&action=review > Source/WebCore/html/shadow/SliderThumbElement.cpp:73 > +#if ENABLE(VIDEO) > RenderTheme* sliderTheme = input->renderer()->theme(); > > return sliderStyle->appearance() == SliderVerticalPart > || (sliderStyle->appearance() == MediaVolumeSliderPart && sliderTheme->usesVerticalVolumeSlider()); > +#else > + return sliderStyle->appearance() == SliderVerticalPart; > +#endif It would be better to do this with an if statement so we would be able to share the SliderVerticalPart code. #if ENABLE(VIDEO) if (sliderStyle->appearance() == MediaVolumeSliderPart && input->renderer()->theme()->usesVerticalVolumeSlider()) return true; #endif return sliderStyle->appearance() == SliderVerticalPart;
Silvia Pfeiffer
Comment 7 2012-06-12 15:18:11 PDT
Registered bug 88930 for cleanup.
Note You need to log in before you can comment on or make changes to this bug.