Support !ENABLE(VIDEO) builds with horizontally layed out video controls. https://bugs.webkit.org/show_bug.cgi?id=88881

Patch by Silvia Pfeiffer <silviapf@chromium.org> on 2012-06-12
Reviewed by Csaba Osztrogonác.

No new tests as this is a regression from WK87835.

* html/shadow/SliderThumbElement.cpp:
(WebCore::hasVerticalAppearance):
Ifdef out video related functionality, since usesVerticalVolumeSlider
does not exist in that case.

Canonical link: https://commits.webkit.org/106721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120092 268f45cc-cd09-0410-ab3c-d52691b4dbfc